2020-07-05  Tom Tromey  <tom@tromey.com>

	* filestuff.h (read_entire_file): Declare.
	* filestuff.cc (read_entire_file): New function.

2020-06-30  Tom Tromey  <tromey@adacore.com>

	PR build/26183:
	* gdb_string_view.h (basic_string_view::to_string): Remove.
	(gdb::to_string): New function.

2020-06-27  Simon Marchi  <simon.marchi@efficios.com>

	* tdesc.h (class print_xml_feature) <add_line>: Add
	ATTRIBUTE_PRINTF.

2020-06-23  Andrew Burgess  <andrew.burgess@embecosm.com>

	* tdesc.cc (print_xml_feature::visit_pre): Use add_line to add
	output content, and call indent as needed in all overloaded
	variants.
	(print_xml_feature::visit_post): Likewise.
	(print_xml_feature::visit): Likewise.
	(print_xml_feature::add_line): Two new overloaded functions.
	* tdesc.h (print_xml_feature::indent): New member function.
	(print_xml_feature::add_line): Two new overloaded member
	functions.
	(print_xml_feature::m_depth): New member variable.

2020-06-23  Andrew Burgess  <andrew.burgess@embecosm.com>

	* tdesc.cc (print_xml_feature::visit_pre): Print compatible
	information.
	* tdesc.h (struct tdesc_compatible_info): Declare new struct.
	(tdesc_compatible_info_up): New typedef.
	(tdesc_compatible_info_list): Declare new function.
	(tdesc_compatible_info_arch_name): Declare new function.

2020-05-25  Michael Weghorn  <m.weghorn@posteo.de>

	* common-utils.cc, common-utils.h (stringify_argv): Drop
	now unused function stringify_argv

2020-05-25  Michael Weghorn  <m.weghorn@posteo.de>

	* common-inferior.cc, common-inferior.h (construct_inferior_arguments):
	Adapt to take a gdb::array_view<char * const> parameter.
	Adapt call site.

2020-05-25  Michael Weghorn  <m.weghorn@posteo.de>

	* common-inferior.cc, common-inferior.h (construct_inferior_arguments):
	Adapt to handle zero args and return a std::string.
	Adapt call site.

2020-05-25  Michael Weghorn  <m.weghorn@posteo.de>

	* common-inferior.h, common-inferior.cc: (construct_inferior_arguments):