@@ -1,5 +1,10 @@
 2020-07-05  Tom Tromey  <tom@tromey.com>
 
+	* pathstuff.h (get_standard_config_dir): Declare.
+	* pathstuff.cc (get_standard_config_dir): New function.
+
+2020-07-05  Tom Tromey  <tom@tromey.com>
+
 	* filestuff.h (read_entire_file): Declare.
 	* filestuff.cc (read_entire_file): New function.
 
